# fastapi-celery

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose-services.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  main.yml
Manifests/: celery-flower-deployment.yaml  celery-flower-service.yaml  fastapi-claim0-persistentvolumeclaim.yaml  fastapi-deployment.yaml  fastapi-service.yaml  rabbitmq-data-persistentvolumeclaim.yaml  rabbitmq-deployment.yaml  rabbitmq-service.yaml  redis-deployment.yaml  redis-service.yaml  worker-claim0-persistentvolumeclaim.yaml  worker-deployment.yaml
app/: main.py
app/worker/: celery_app.py  celery_worker.py
server/: Pipfile  main.py
server/worker/: celery_app.py  celery_worker.py
worker/: celery_app.py
