[tool.poetry]
name = "fastapi-celery"
version = "0.1.0"
description = "FastAPI with Celery tasks minimal example"
authors = ["Grega Vrbančič <grega.vrbancic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.8.3"
fastapi = "^0.70.0"
hypercorn = "^0.13.2"
celery = "^5.2.3"
redis = "^4.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
